<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:background="#ffffff"
    android:id="@+id/step_panel"
    android:minHeight="?android:attr/listPreferredItemHeight">

    <TextView
        android:id="@+id/tv_step_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:textColor="#ffffff"
        android:layout_weight="2"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_step"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"/>

</LinearLayout>